// tag::header[]
[%autowidth.stretch]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::ehc[]
| 06/02/2022 | Hybrid Cloud | Added list of region availability for NFS datastores for NetApp Hybrid Multi-Cloud with VMware
// end::ehc[]
// tag::aiml[]
| 05/20/2022 | AI | New BeeGFS Design and Deployment guides for SuperPOD
// end::aiml[]
// tag::vmware[]
// tag::ehc[]
| 04/01/2022 | Hybrid Cloud | Organized content of Enterprise Hybrid Cloud solutions: landing pages for each hyperscaler and inclusion of available solution (use case) content
// end::ehc[]
// end::vmware[]
// tag::containers[]
| 03/29/2022 | Containers | Added a new TR: DevOps with NetApp Astra
// end::containers[]
// tag::containers[]
| 03/08/2022 | Containers | Added a new video demo: Accelerate Software Development with Astra Control and NetApp FlexClone Technology
// end::containers[]
// tag::containers[]
| 03/01/2022 | Containers | Added new sections to NVA-1160: Installation of Astra Control Center via OperatorHub and Ansible
// end::containers[]
// tag::general[]
// tag::aiml[]
| 02/02/2022 | General | Created landing pages to better organize content for AI and Modern Data Analytics
// end::aiml[]
// end::general[]
// tag::aiml[]
| 01/22/2022 | AI | Added TR: Data movement with E-Series and BeeGFS for AI and analytics workflows
// end::aiml[]
// tag::general[]
// tag::ehc[]
// tag::vmware[]
| 12/21/2021 | General | Created landing pages to better organize content for Virtualization and Enterprise Hybrid Cloud
// end::vmware[]
// end::ehc[]
// end::general[]
// tag::containers[]
| 12/21/2021 | Containers | Added a new video demo: Leverage NetApp Astra Control to Perform Post-mortem Analysis and Restore Your Application to NVA-1160
// end::containers[]
// tag::ehc[]
| 12/06/2021 | Hybrid Cloud | Creation of Enterprise Hybrid Cloud (EHC) content for virtualization environment and guest connected storage options
// end::ehc[]
// tag::containers[]