@@ -27,7 +27,7 @@ View the detailed link:aws-guest.html[guest connect storage options for VMC].
 
 Read more about link:https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/[FSx ONTAP as a native datastore^1^].
 
-NOTE: 1 - Currently in Private Preview
+NOTE: 1 - Currently in Public Preview
 
 // end::aws-datastore[]
 --
@@ -55,7 +55,7 @@ View the detailed link:azure-guest.html[guest connect storage options for AVS].
 
 Read more about link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/[Azure NetApp Files (ANF) as a native datastore^1^].
 
-NOTE: 1 - Currently in Private Preview
+NOTE: 1 - Currently in Public Preview
 
 // end::azure-datastore[]
 --
