@@ -16,6 +16,8 @@ indexpage:
           url: https://www.netapp.com/pdf.html?item=/media/20646-tr-4869.pdf
         - title: "NetApp E-Series E5700 and Splunk Enterprise"
           url: https://www.netapp.com/pdf.html?item=/media/16851-tr-4623pdf.pdf
+        - title: "NetApp EF600 with Splunk Enterprise"
+          url: https://www.netapp.com/pdf.html?item=/media/72003-tr-4930.pdf
 #
     - title: "Use Cases"
       links:
