@@ -20,8 +20,8 @@ indexpage:
       links:
         - title: "Configure the Virtualization Environment"
           url: /aws/aws-setup.html
-        - title: "Native Datastore - Private Preview"
-          url: https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/
+#        - title: "Native Datastore - Private Preview"
+#          url: https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/
 #        - title: "FSx ONTAP as a Native Datastore"
 #          url:
         - title: "FSx ONTAP as Guest Connected Storage"
@@ -30,7 +30,7 @@ indexpage:
           url: /aws/aws-guest.html#cvo
         - title: "Solutions for VMC on AWS"
           url: /aws/aws-solutions.html
-        - title: "Region Support for NFS Datastores"
+        - title: "Region Support for NFS Datastores in AWS"
           url: /aws/aws-regions.html
 
 #
@@ -38,8 +38,8 @@ indexpage:
       links:
         - title: "Configure the Virtualization Environment"
           url: /azure/azure-setup.html
-        - title: "Native Datastore - Private Preview"
-          url: https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/
+#        - title: "Native Datastore - Private Preview"
+#          url: https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/
 #        - title: "Azure NetApp Files (ANF) as a Native Datastore"
 #          url:
         - title: "Azure NetApp Files (ANF) as Guest Connected Storage"
@@ -48,8 +48,8 @@ indexpage:
           url: /azure/azure-guest.html#cvo
         - title: "Solutions for AVS on Azure"
           url: /azure/azure-solutions.html
-#        - title: "Region Support for NFS Datastores"
-#          url: /azure/azure-regions.html
+        - title: "Region Support for NFS Datastores in Azure"
+          url: /azure/azure-regions.html
 #
     - title: "NetApp on Google Cloud Platform (GCVE)"
       links:
@@ -65,7 +65,7 @@ indexpage:
           url: /gcp/gcp-guest.html#cvs
         - title: "Solutions for GCVE on GCP"
           url: /gcp/gcp-solutions.html\
-#        - title: "Region Support for NFS Datastores"
+#        - title: "Region Support for NFS Datastores in GCP"
 #          url: /gcp/gcp-regions.html
         - title: "Security overview - NetApp Cloud Volumes Service (CVS) in Google Cloud"
           url: /ncvs/ncvs-gc-overview.html
