@@ -98,14 +98,12 @@ For example:
 
 Thus, using NetApp Cloud Volumes as guest-connected storage would help in expanding the storage and optimizing the TCO while meeting the performance and data protection requirements.
 
-[NOTE]
-====
-NetApp storage as a datastore is currently available as Private preview in all of the major hyperscaler clouds.  Please visit the following links for more information.
+NOTE:
+NetApp storage as a datastore is currently available as Public preview for AWS/VMC and Azure/AVS and Private preview for GCP/GSVE.  Please visit the following links for more information.
 
-link:https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/[FSx ONTAP as a native datastore for AWS]
-link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/[Azure NetApp Files (ANF) as a native datastore for Azure]
+// link:https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/[FSx ONTAP as a native datastore for AWS]
+// link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/[Azure NetApp Files (ANF) as a native datastore for Azure]
 link:https://www.netapp.com/google-cloud/google-cloud-vmware-engine-registration/[Cloud Volumes Service (CVS) as a native datastore for GCP]
-====
 
 === Points to Remember
 
@@ -149,14 +147,13 @@ NetApp cloud storage offers the following benefits:
 
 * In-guest storage was the only available option at the time this document was written.
 
-[NOTE]
-====
-NetApp storage as a datastore is currently available as Private preview in all of the major hyperscaler clouds.  Please visit the following links for more information.
+NOTE: 
+NetApp storage as a datastore is currently available as Public preview for AWS/VMC and Azure/AVS and Private preview for GCP/GSVE.  Please visit the following links for more information.
 
-link:https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/[FSx ONTAP as a native datastore for AWS]
-link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/[Azure NetApp Files (ANF) as a native datastore for Azure]
+// link:https://blogs.vmware.com/cloud/2021/12/01/vmware-cloud-on-aws-going-big-reinvent2021/[FSx ONTAP as a native datastore for AWS]
+// link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for-azure-vmware-solution-is-coming-soon/[Azure NetApp Files (ANF) as a native datastore for Azure]
 link:https://www.netapp.com/google-cloud/google-cloud-vmware-engine-registration/[Cloud Volumes Service (CVS) as a native datastore for GCP]
-====
+
 
 NOTE: Engage NetApp solution architects and respective hyperscaler cloud architects for planning and sizing of storage and the required number of hosts. NetApp recommends identifying the storage performance requirements before using the Cloud Volumes ONTAP sizer to finalize the storage instance type or the appropriate service level with the right throughput.
 
