@@ -19,9 +19,9 @@ Learn more about the the Global Region support for NFS datastores on AWS, Azure 
 
 include::../_include/aws-region-support.adoc[]
 
-//== Azure Region Availability
+== Azure Region Availability
 
-//include::../_include/azure-region-support.adoc[]
+include::../_include/azure-region-support.adoc[]
 
 //== GCP Region Availability
 
