@@ -15,7 +15,7 @@ summary:
 [.lead]
 Understanding the combinations for NetApp storage support in the major hyperscalers.
 
-[width=50,cols="3, 3, 3",frame=all,grid=all]
+[%autowidth.stretch]
 |===
 | ^| *Guest Connected* ^| *Native Datastore*
 //
@@ -38,7 +38,9 @@ link:https://azure.microsoft.com/en-us/updates/azure-netapp-files-datastores-for
 CVS
 link:gcp/gcp-guest.html[Details]
 ^| CVS
-link:https://www.netapp.com/google-cloud/google-cloud-vmware-engine-registration/[Details^1^]
+link:https://www.netapp.com/google-cloud/google-cloud-vmware-engine-registration/[Details^2^]
 |===
 
-NOTE: 1 - Currently in Private Preview
+NOTE: 1 - Currently in Public Preview
+
+NOTE: 2 - Currently in Private Preview
