@@ -3,6 +3,9 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::aiml[]
+| 06/07/2022 | Data Analytics | Added link to NetApp EF600 with Splunk Enterprise solution
+// end::aiml[]
 // tag::ehc[]
 | 06/02/2022 | Hybrid Cloud | Added list of region availability for NFS datastores for NetApp Hybrid Multi-Cloud with VMware
 // end::ehc[]
